compiler/src/test/resources/amyc/typer/failing/ConstructorError3.amy
object ConstructorError
  abstract class Foo 
  case class Bar(b2: Foo2) : Foo

  abstract class Foo2
  case class Bar2(i: Int) : Foo2
  
  Bar(Bar(Bar2(1)))
end ConstructorError
